Image sequence works bad with Displace modifier #53032

Closed
opened 2017-10-09 09:59:04 +02:00 by Serge Lyatin · 6 comments

System Information
Win7 64bit

Blender Version
Broken: 2.79
Worked: 2.78a, 2.77a

Short description of error
Single render or F12 doesn't want to render at all, and Animation render kind of working OK, however it misses first frame from sequence (if render start is equal to first image in sequence) and doing it nice, when render start is 0 . All of this worked in some previous versions.

Exact steps for others to reproduce the error
Displace_seq.blend
Image sequence (2 frames):
seq.zip

**System Information** Win7 64bit **Blender Version** Broken: 2.79 Worked: 2.78a, 2.77a **Short description of error** Single render or F12 doesn't want to render at all, and Animation render kind of working OK, however it misses first frame from sequence (if render start is equal to first image in sequence) and doing it nice, when render start is 0 . All of this worked in some previous versions. **Exact steps for others to reproduce the error** [Displace_seq.blend](https://archive.blender.org/developer/F991612/Displace_seq.blend) Image sequence (2 frames): [seq.zip](https://archive.blender.org/developer/F991616/seq.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL

Added subscriber: @zeauro

Added subscriber: @zeauro

I can confirm that there is a problem, here.
I had to open an Image Editor, modify Number of frames, Start Frame settings and enable autorefresh into Image Properties.

It looks like changes made into Texture tab of Properties Editor was not taken into account by other editors and Single Render.

I can confirm that there is a problem, here. I had to open an Image Editor, modify Number of frames, Start Frame settings and enable autorefresh into Image Properties. It looks like changes made into Texture tab of Properties Editor was not taken into account by other editors and Single Render.

This issue was referenced by dc65a6f63b

This issue was referenced by dc65a6f63b54fce657750360e569ea8b4b067bf7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53032
No description provided.